source/tests/errors/expected_indentation.apex
import os
x = 10
if x == 10
  os.output("hi")